Processamento de pedidos em andamento. [BUG] inscrição na 1a disciplina tambémse realiza na última.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
  
 // Universidade Federal do Rio de Janeiro
-// EEL670 - Linguagens de Programção
+// EEL670 - Linguagens de Programação
 // Prof.: Miguel Campista
 // Projeto Final
 // Autor: Artur Amaral | DRE: 119057968 | Agosto 2021
