--- a/README
+++ b/README
@@ -7,13 +7,7 @@
    
     O projeto consiste de uma simulação simples de um sistema de inscrição em
 disciplinas de uma universidade. Alunos podem fazer pedidos de inscrição nas
-matérias, e quando o sistema roda, eles são alocados segundo alguns critérios
-de prioridade. O programa é escrito em C++ e realiza a persistência dos dados
-em um banco MySQL, via a API do pacote libmysqlclient-dev.
-
-
-
-Work in progress.
-
-
-
+matérias, e quando o sistema roda, eles são alocados nas respectivas disciplinas.
+O programa é escrito em C++ e realiza a persistência dos dados em um banco MySQL,
+ via a API do pacote libmysqlclient-dev.
+	Para uma documentação mais detalhada, recorra ao pdf no diretório doc/.
